[gd_scene load_steps=20 format=2]

[ext_resource path="res://OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Shampoo1.gd" type="Script" id=2]
[ext_resource path="res://RED BULL SZAMPOO.png" type="Texture" id=3]
[ext_resource path="res://Shampoo3.gd" type="Script" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://Shampoo2.gd" type="Script" id=6]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Coloful.jpg" type="Texture" id=8]
[ext_resource path="res://Bald.jpg" type="Texture" id=9]
[ext_resource path="res://Zohan.jpg" type="Texture" id=10]
[ext_resource path="res://VeryHChest.jpg" type="Texture" id=11]
[ext_resource path="res://FullWhite.jpg" type="Texture" id=12]
[ext_resource path="res://HairyHead.jpg" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Score" type="Label" parent="."]
visible = false
margin_left = 168.0
margin_top = 640.0
margin_right = 328.0
margin_bottom = 700.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadHairLabel" type="Label" parent="."]
margin_left = 192.0
margin_top = 16.0
margin_right = 292.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Head Hair"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairHead" type="ProgressBar" parent="."]
margin_left = 92.649
margin_top = 40.0
margin_right = 342.649
margin_bottom = 70.0
rect_scale = Vector2( 1.2, 1.2 )
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColornessLabel" type="Label" parent="."]
margin_left = 192.0
margin_top = 96.0
margin_right = 292.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 3 )
text = "Colorness"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colorness" type="ProgressBar" parent="."]
margin_left = 92.649
margin_top = 120.0
margin_right = 342.649
margin_bottom = 150.0
rect_scale = Vector2( 1.2, 1.2 )
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SilkySmoothLabel" type="Label" parent="."]
margin_left = 192.0
margin_top = 176.0
margin_right = 292.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 4 )
text = "Silky Smooth
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SilkySmooth" type="ProgressBar" parent="."]
margin_left = 92.649
margin_top = 200.0
margin_right = 342.649
margin_bottom = 230.0
rect_scale = Vector2( 1.2, 1.2 )
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairChestLabel" type="Label" parent="."]
margin_left = 192.0
margin_top = 256.0
margin_right = 292.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 5 )
text = "Chest Hair
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairChest" type="ProgressBar" parent="."]
margin_left = 92.649
margin_top = 280.0
margin_right = 342.649
margin_bottom = 310.0
rect_scale = Vector2( 1.2, 1.2 )
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreesLabel" type="Label" parent="."]
margin_left = 192.0
margin_top = 336.0
margin_right = 292.0
margin_bottom = 385.0
custom_fonts/font = SubResource( 6 )
text = "Trees Left
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trees" type="ProgressBar" parent="."]
margin_left = 92.6493
margin_top = 360.0
margin_right = 342.649
margin_bottom = 390.0
rect_scale = Vector2( 1.2, 1.2 )
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shampoo1" type="Button" parent="."]
margin_left = 24.0
margin_top = 472.0
margin_right = 114.0
margin_bottom = 612.0
icon = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShampooLabel1" type="Label" parent="Shampoo1"]
margin_left = 3.05255
margin_top = -1.52625
margin_right = 93.0526
margin_bottom = 148.474
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shampoo2" type="Button" parent="."]
margin_left = 192.0
margin_top = 472.0
margin_right = 282.0
margin_bottom = 612.0
icon = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShampooLabel2" type="Label" parent="Shampoo2"]
margin_right = 90.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shampoo3" type="Button" parent="."]
margin_left = 360.0
margin_top = 472.0
margin_right = 450.0
margin_bottom = 612.0
icon = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShampooLabel3" type="Label" parent="Shampoo3"]
margin_right = 90.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="HUD" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Bald" type="TextureRect" parent="."]
visible = false
margin_right = 540.0
margin_bottom = 720.0
rect_scale = Vector2( 0.88, 1.08 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colorful" type="TextureRect" parent="."]
visible = false
margin_right = 522.0
margin_bottom = 720.0
rect_scale = Vector2( 0.920001, 1 )
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Smooth" type="TextureRect" parent="."]
visible = false
margin_right = 1000.0
margin_bottom = 1340.0
rect_scale = Vector2( 0.479999, 0.537121 )
texture = ExtResource( 10 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairyC" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 1.12, 2.12 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoColor" type="TextureRect" parent="."]
visible = false
margin_right = 480.0
margin_bottom = 720.0
rect_scale = Vector2( 0.760001, 1.12 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullHair" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.497257, 0.900217 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Shampoo1" to="." method="_on_Shampoo1_pressed"]
[connection signal="pressed" from="Shampoo2" to="." method="_on_Shampoo2_pressed"]
[connection signal="pressed" from="Shampoo3" to="." method="_on_Shampoo3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
